--- a/web/css/style.css
+++ b/web/css/style.css
@@ -127,6 +127,23 @@ nav {
     margin-left: 1rem;
 }
 
+table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 1em 0;
+}
+th, td {
+    border: 1px solid #ccc;
+    padding: 0.75em 1em;
+    text-align: left;
+}
+th {
+    background: #f9f9f9;
+    font-weight: bold;
+}
+tbody tr:nth-child(even) {
+    background: #f5f5f5;
+}
 
 /* === DESKTOP Submenu logic (hover) === */
 @media (min-width: 769px) {
